[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/Components/NotificationList.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Elements/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/ChatBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menus/Characters/CharacterColorEditor.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=5]
[ext_resource path="res://src/UI/GameUI.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/icons/chevron-up.svg" type="Texture" id=7]
[ext_resource path="res://src/UI/Elements/ToggleChatButton.gd" type="Script" id=8]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 24.0, 1056.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 24.0, 1896.0 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeColorButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
text = "Change Color"
flat = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 200.0
margin_bottom = 80.0

[node name="LogOutButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 96.0
margin_right = 200.0
margin_bottom = 156.0
text = "Log out"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -424.0
margin_right = 840.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleChatButton" type="Button" parent="HBoxContainer"]
margin_top = 320.0
margin_right = 40.0
margin_bottom = 400.0
rect_min_size = Vector2( 40, 80 )
size_flags_vertical = 8
toggle_mode = true
shortcut_in_tooltip = false
text = "Chat"
icon = ExtResource( 7 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 0.0
margin_right = 856.0
margin_bottom = 400.0

[node name="NotificationsUI" parent="." instance=ExtResource( 1 )]
margin_left = -424.0
margin_top = -104.0
margin_right = -24.0
margin_bottom = -24.0
mouse_filter = 2

[node name="CharacterColorEditor" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="VBoxContainer/ChangeColorButton" to="." method="_on_ChangeColorButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LogOutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="toggled" from="HBoxContainer/ToggleChatButton" to="HBoxContainer/ChatBox" method="_on_ToggleChatButton_toggled"]
[connection signal="toggled" from="HBoxContainer/ToggleChatButton" to="HBoxContainer/ToggleChatButton" method="_on_toggled"]
[connection signal="edit_ended" from="HBoxContainer/ChatBox" to="." method="_on_ChatBox_edit_ended"]
[connection signal="edit_started" from="HBoxContainer/ChatBox" to="." method="_on_ChatBox_edit_started"]
[connection signal="text_sent" from="HBoxContainer/ChatBox" to="." method="_on_ChatBox_text_sent"]
[connection signal="color_changed" from="CharacterColorEditor" to="." method="_on_CharacterColorEditor_color_changed"]
